# eye_tracker_sexism

./: .gitignore  README.md  data.ipynb  eye_tracking.bib  mused.ipynb  process_corpus.ipynb  process_mused.ipynb  pyproject.toml  stats.ipynb  utils.py
data/: parquets.sh
latex/: 1-coberta.tex  2-resums.tex  Makefile  llargada.md  main.aux  main.bib  main.tex  preamble.tex  ub-lingu-tfg.sty
latex/aux/: config_curs.tex
latex/capitols/: annex_textos.tex  annexos.tex  conclusions.tex  intro.tex  marc.tex  metodologia.tex  models.tex  resultats.tex
src/: EXPLAIN_CAPTUM_STATUS.md  abstract.md  anotations_analysis.ipynb  bert_baseline.ipynb  compare_results.py  create_corpus_from_mused.ipynb  data.ipynb  explain_captum.py  explain_models.py  main.py  process_mused.ipynb  process_tobii_raw_data.ipynb  pyproject.toml  train_models.py
src/explain/: base.py  explain_captum.py  gradient.py  ig.py
src/models/: mlm.py  seq_cls.py  utils.py
src/scripts/: compress.sh  convert2parquet.py
src/utils/: data.py  data_correction.py  metrics.py  mused.py  regressions.py  tobii.py  train.py  utils.py  viz.py
src/viz/: annotation_spans.py
utils/: utils.py  viz.py
