[project]
name = "eye-tracker-sexism"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.11"
dependencies = [
    "jupyterlab-lsp>=5.2.0",
    "jupyterlab>=4.5.0",
    "matplotlib>=3.10.7",
    "mystmd>=1.6.6",
    "pandas>=2.3.3",
    "ruff>=0.14.8",
    "scipy>=1.16.3",
    "jupyterlab-code-formatter>=3.0.3",
    "black>=26.1.0",
    "isort>=8.0.0",
    "spacy>=3.8.11",
]
